[tool.poetry]
name = "twitter-stream"
version = "0.1.0"
description = ""
authors = ["masashi kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.6.0"
pymongo = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
